apps/biblora/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblora-api
  namespace: biblora
spec:
  selector:
    app: biblora-api
  ports:
  - port: 80
    targetPort: 3000
